@@ -3,7 +3,8 @@ This file contains information about Fuego releases.
 Current development version (branch VERSION_0_1_FIXES)
 ======================================================
 
-*
+* Don't use log2() in SgFastLog (not yet part of the standard C++ library
+  and broken implementation on some platforms)
 
 Version 0.1.1 - 2008 July 9
 ===========================
